--- a/index.html
+++ b/index.html
@@ -11,7 +11,20 @@
 </head>
 
 <body>
-    <h1>AI Universe Hub</h1>
+    <header>
+        <h1 class="text-center m-5 fst-italic fw-bolder text-primary-emphasis">AI Universe Hub</h1>
+        <div class="d-grid gap-2 col-1 mx-auto">
+            <button type="button" class="btn btn-danger mx-auto">Sort by Date</button>
+        </div>
+        <hr class="bg-info">
+        <hr>
+    </header>
+
+
+
+
+
+
     <!-- Bootstrap Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
