--- a/index.html
+++ b/index.html
@@ -16,9 +16,16 @@
         <div class="d-grid gap-2 col-1 mx-auto">
             <button type="button" class="btn btn-danger mx-auto">Sort by Date</button>
         </div>
-        <hr class="bg-info">
         <hr>
     </header>
+
+    <main class="container">
+        <section>
+            <div id="hubs-container" class="row row-cols-1 row-cols-md-3 g-4">
+
+            </div>
+        </section>
+    </main>
 
 
 
@@ -30,7 +37,7 @@
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
     <!-- JS Scripts -->
-    <script src="Js/universe.js"></script>
+    <script src="Js/app.js"></script>
 </body>
 
 </html>
