front page complete

--- a/index.html
+++ b/index.html
@@ -21,11 +21,17 @@
 
     <main class="container">
         <section>
-            <div id="hubs-container" class="row row-cols-1 row-cols-md-3 g-4">
+            <div id="hubs-container" class="row row-cols-1 row-cols-md-3 g-5 mt-5">
 
             </div>
         </section>
     </main>
+
+    <footer>
+        <div class="d-grid gap-2 col-1 mx-auto m-5">
+            <button type="button" class="btn btn-danger mx-auto">See More</button>
+        </div>
+    </footer>
 
 
 
