--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <!-- Modal -->
             <div class="modal fade" id="DetailModal" tabindex="-1" aria-labelledby="DetailModalLabel"
                 aria-hidden="true">
-                <div class="modal-dialog">
+                <div class="modal-dialog modal-xl modal-dialog-centered">
                     <div class="modal-content">
                         <div class="modal-header">
                             <h1 class="modal-title fs-5" id="DetailModalLabel">Modal title</h1>
