--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <title>AI Universe Hub</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
 </head>
 
 <body>
     <header>
-        <h1 class="text-center m-5 fst-italic fw-bolder text-primary-emphasis">AI Universe Hub</h1>
+        <h1 class="text-center m-5 fst-italic fw-bolder text-primary-emphasis">AI
+            Universe Hub</h1>
         <div class="d-grid gap-2 col-1 mx-auto">
             <button type="button" class="btn btn-danger mx-auto">Sort by Date</button>
         </div>
