--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
                     <div class="modal-content">
                         <div class="modal-header">
                             <h1 class="modal-title fs-5" id="DetailModalLabel">Modal title</h1>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            <button type="button" class="btn-close bg-danger position-absolute top-0 end-0"
+                                data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div id="detail-body" class="modal-body">
 
